# konoma

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  config.example.ja.toml  config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
samples/: README.md  images.md  japanese.txt  links.ja.md  links.md  long-lines.txt  m3-demo.md  many-lines.txt  markdown.md  sample.csv  sample.tsv  sequence.mmd  tutorial.ja.md  tutorial.md
samples/code/: README.md  app.ts  build.sh  calc.c  ci.yml  config.toml  config.yaml  data.json  hello.rs  large_generated.rs  main.go  script.py  types.h  util.js  widget.cpp
site/: astro.config.mjs  package-lock.json
site/public/: robots.txt
site/src/components/: TerminalDemo.astro
site/src/content/docs/: getting-started.md  index.mdx  tutorial.md
site/src/content/docs/guides/: agent-watch.md  files.md  git.md  preview.md
site/src/content/docs/ja/: getting-started.md  index.mdx  tutorial.md
site/src/content/docs/ja/guides/: agent-watch.md  files.md  git.md  preview.md
site/src/content/docs/ja/reference/: configuration.md  keymap.md
site/src/content/docs/reference/: configuration.md  keymap.md
site/src/styles/: custom.css
src/: app.rs  bookmarks.rs  e2e_tests.rs  fileops.rs  git.rs  i18n.rs  keymap.rs  main.rs  mem_tests.rs  session.rs  speed_tests.rs
src/app/: bookmark_actions.rs  file_actions.rs  git_view.rs  md_tasks.rs  paste_jump.rs  session_actions.rs  tests.rs
src/config/: mod.rs  parity_tests.rs
src/preview/: code.rs  command.rs  gitdiff.rs  image.rs  kitty.rs  kitty_diacritics.rs  markdown.rs  math.rs  mod.rs  pdf.rs  svg.rs  table.rs  text.rs  video.rs  window.rs
src/ui/: bookmarks.rs  dialog.rs  git.rs  help.rs  icons.rs  info.rs  mod.rs  outline.rs  preview.rs  status.rs  tab_list.rs  tabbar.rs  table.rs  tree.rs
